style.css
#outputArea{
    background-color: azure;
    border: 3px solid grey;
    padding: 10px;
    max-width: 500px;
    margin: auto;
}
#gameButton1{
    padding: 5px;
    font-family: "Arial Black";
}
#gameButton2 {
    padding: 5px;
    font-family: "Arial Black";
}
#resetButton {
    padding: 5px;
    font-family: "Arial";
    background-color: red;
}
label {
    font-family: "Arial";
    width: 200px;
}
div {
    align-content: center;
}

